--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     
     </form>
 
+    <!-- Тут потрібно створювати новий формс та задавати йому нові класи та айді? -->
+
     <script src="./index.js" type="module"></script>
 </body>
 </html>
